...
    </plurals>
    <string name="track_unavailable">This track is unavailable.</string>
    <string name="open_album">Open album: %1$s</string>
    <string name="detail_not_loaded">Details could not be loaded. Try refreshing.</string>
    <string name="browser_login_complete">Returning to Play…</string>
    <string name="login_required">Sign in to access music details and playback.</string>
    <string name="browser_unavailable">No browser is available. Enable a browser and try again.</string>
    <string name="github_download">Download from GitHub</string>
    <string name="create_playlist">Create playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="save">Save</string>
    <string name="playlist_private_description">The new playlist will be private.</string>
...
